# TurkishWordNet-CPP

./: .gitignore  CMakeLists.txt  CategoryType.h  IdMapping.cpp  IdMapping.h  InterlingualDependencyType.h  InterlingualRelation.cpp  InterlingualRelation.h  Literal.cpp  Literal.h  PolarityType.h  README.md  Relation.cpp  Relation.h  SemanticRelation.cpp  SemanticRelation.h  SemanticRelationType.h  SynSet.cpp  SynSet.h  Synonym.cpp  Synonym.h  TestWordNet.cpp  WordNet.cpp  WordNet.h  conanfile.py  conanfile.txt
Similarity/: ICSimilarity.h  JCN.h  LCH.cpp  Similarity.h
Test/: LCHTest.cpp  SimilarityPathTest.cpp  WordNetTest.cpp  WuPalmerTest.cpp
include/: ExceptionalWord.h  Pos.h  Word.h  XmlDocument.h
src/: CMakeLists.txt  CategoryType.h  IdMapping.cpp  IdMapping.h  InterlingualDependencyType.h  InterlingualRelation.cpp  InterlingualRelation.h  Literal.cpp  Literal.h  Relation.cpp  Relation.h  SemanticRelation.cpp  SemanticRelation.h  SemanticRelationType.h  SynSet.cpp  SynSet.h  Synonym.cpp  Synonym.h  WordNet.cpp  WordNet.h
src/Similarity/: ICSimilarity.h  JCN.cpp  LCH.cpp  LCH.h  Lin.cpp  Lin.h  Resnik.cpp  Resnik.h  SimilarityPath.cpp  SimilarityPath.h  WuPalmer.cpp  WuPalmer.h
